--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -19,9 +19,10 @@ ul.dropdown ul {
 }
 
 ul.dropdown {
- position: relative;
- z-index: 597;
+ position: fixed !importtant;
+ /*z-index: 597;*/
  float: left;
+ top:0px !important;
 }
 
 ul.dropdown li {
