--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -4,8 +4,8 @@
 .container { padding: 0px; }
 
 .horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%; }
-.horizontal-centering > * > * { float: left; width: auto; position: relative; left: 50%; margin: 0; padding: 0; }
-.horizontal-centering > * > * > * { float: left; position: relative; right: 50%; }
+.horizontal-centering > * > * { float: left; width: auto; left: 50%; margin: 0; padding: 0; }
+.horizontal-centering > * > * > * { float: left; right: 50%; }
 /**
  * Horizontal CSS Drop-Down Menu Module
  */
@@ -19,7 +19,7 @@ ul.dropdown ul {
 }
 
 ul.dropdown {
- position: fixed !important;
+ /*position: fixed !important;*/
  /*z-index: 597;*/
  float: left;
  top:0px !important;
