--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -20,8 +20,8 @@ ul.dropdown ul {
 
 ul.dropdown {
  /*position: fixed !important;*/
- /*z-index: 597;*/
- float: left;
+ z-index: 597;
+ /*float: left;*/
  top:0px !important;
 }
 
@@ -41,7 +41,7 @@ ul.dropdown li:hover {
 
 ul.dropdown ul {
  visibility: hidden;
- position: absolute;
+ /*position: absolute;*/
  top: 100% 0px;
  left: 0;
  z-index: 598;
