--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -4,8 +4,8 @@
 .container { padding: 0px; }
 
 .horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%; }
-.horizontal-centering > * > * { float: left; width: auto; left: 50%; margin: 0; padding: 0; }
-.horizontal-centering > * > * > * { float: left; right: 50%; }
+.horizontal-centering > * > * { float: left; width: auto; left: 50%; margin: 0; padding: 0; position:fixed; }
+.horizontal-centering > * > * > * { float: left; right: 50%; position:fixed; }
 /**
  * Horizontal CSS Drop-Down Menu Module
  */
@@ -22,7 +22,6 @@ ul.dropdown {
  /*position: fixed !important;*/
  z-index: 597;
  /*float: left;*/
- top:0px !important;
 }
 
 ul.dropdown li {
@@ -34,7 +33,7 @@ ul.dropdown li {
 
 ul.dropdown li.hover,
 ul.dropdown li:hover {
- position: relative;
+ /*position: relative;*/
  z-index: 599;
  cursor: default;
 }
