--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -20,7 +20,7 @@ ul.dropdown ul {
 
 ul.dropdown {
  /*position: fixed !important;*/
- z-index: 597;
+ /*z-index: 597;*/
  /*float: left;*/
 }
 
@@ -34,7 +34,7 @@ ul.dropdown li {
 ul.dropdown li.hover,
 ul.dropdown li:hover {
  /*position: relative;*/
- z-index: 599;
+ /*z-index: 599;*/
  cursor: default;
 }
 
@@ -43,7 +43,7 @@ ul.dropdown ul {
  /*position: absolute;*/
  top: 100% 0px;
  left: 0;
- z-index: 598;
+ /*z-index: 598;*/
  width: 100%;
 }
 
