--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -1,9 +1,9 @@
 /* horizontal-centering */
 @charset "UTF-8";
-.wrapper { min-height: 100%; width: 100%;overflow: hidden; }
+.wrapper { min-height: 100%; width: 100%; overflow: hidden; }
 .container { padding: 0px; }
 
-.horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%; }
+.horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%; overflow: hidden; }
 .horizontal-centering > * > * { float: left; width: auto; left: 50%; margin: 0; padding: 0; position: relative;  }
 .horizontal-centering > * > * > * { float: left; right: 50%; position: relative;  }
 /**
