--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -19,10 +19,9 @@ ul.dropdown ul {
 }
 
 ul.dropdown {
- position: fixed;
+ position: relative;
  z-index: 597;
  float: left;
- width:100%;
  background:#000;
  top:0;
 }
