--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -19,11 +19,11 @@ ul.dropdown ul {
 }
 
 ul.dropdown {
- position: relative;
+ /*position: relative;*/
  z-index: 597;
  float: left;
  background:#000;
- top:0;
+ top:0px;
 }
 
 ul.dropdown li {
