--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -3,7 +3,7 @@
 .wrapper { min-height: 100%; width: 100%; overflow: hidden; }
 .container { padding: 0px; }
 
-.horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%;  z-index: 999; }
+.horizontal-centering { background:#000 repeat-x fixed; position:fixed; width:100%;  z-index: 999; top:0px; }
 .horizontal-centering > * > * { float: left; width: auto; left: 50%; margin: 0; padding: 0; position: relative;  }
 .horizontal-centering > * > * > * { float: left; right: 50%; position: relative;  }
 /**
