--- a/nvidia-menu.css
+++ b/nvidia-menu.css
@@ -44,7 +44,7 @@ ul.dropdown li:hover {
 ul.dropdown ul {
  visibility: hidden;
  position: absolute;
- top: 100% 0;
+ top: 100% 0px;
  left: 0;
  z-index: 598;
  width: 100%;
@@ -55,7 +55,7 @@ ul.dropdown ul li {
 }
 
 ul.dropdown ul ul {
- top: 0;
+ top: 0px;
  left: 99%;
 }
 
